<?xml version="1.0"?>
<package format="2">
  <name>rtabmap</name>
  <version>0.20.21</version>
  <description>RTAB-Map's standalone library. RTAB-Map is a RGB-D SLAM approach with real-time constraints.</description>
  <maintainer email="matlabbe@gmail.com">Mathieu Labbe</maintainer>
  <author>Mathieu Labbe</author>
  <license>BSD</license>
  <url type="website">http://introlab.github.io/rtabmap</url>
  <url type="bugtracker">https://github.com/introlab/rtabmap/issues</url>
  <url type="repository">https://github.com/introlab/rtabmap</url>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>proj</build_depend>
  <depend>cv_bridge</depend>
  <depend>libfreenect-dev</depend>
  <depend>libg2o</depend>
  <depend>libopenni-dev</depend>
  <!-- <depend>libopenni2-dev</depend> --> <!-- not available on Jessie -->
  <depend>libpcl-all-dev</depend> <!--  include libvtk-qt -->
  <depend>libpointmatcher</depend> <!-- optional but recommended if lidar is used, also not available on 32 bits system, but rtabmap can be built without it -->
  <!-- <depend>libproj-dev</depend> needed due to error in vtk6 (kinetic)-->
  <depend>libsqlite3-dev</depend>
  <depend>octomap</depend>
  <depend>qt_gui_cpp</depend> <!-- libqt4-dev or libqt5-dev -->
  <depend>zlib</depend>

  <export>
	  <build_type>cmake</build_type>
  </export>
</package>
